--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="upload-file-box"></div>
+  <div class="button" id="upload-file">
+  </div>
+  <div class="button">
+
+  </div>
+  <div class="button">
+    
+  </div>
 </body>
 </html>
