Added functional file picker

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="button" id="upload-file">
+  <div id="frame">
+    +
+    <input type="file" id="filePicker" accept=".gif">
   </div>
-  <div class="button">
 
-  </div>
-  <div class="button">
-    
-  </div>
+  <script src="ui.js"></script>
 </body>
 </html>
