fixed file dialog

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
   <div id="frame">
     +
     <input type="file" id="filePicker" accept=".gif">
+    
   </div>
 
-  <script src="ui.js"></script>
+  <script src="renderer.js"></script>
 </body>
 </html>
