--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="back-arrow" class="arrow"></div>
   <div id="frame">
     +
-    <input type="file" id="filePicker" accept=".gif">
-    
   </div>
-
+  <div id="forward-arrow" class="arrow"></div>
   <script src="renderer.js"></script>
 </body>
 </html>
