--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="back-arrow" class="arrow"></div>
+  <div id="back-arrow" class="arrow"><img src="../assets/backward.svg" class="arrow-image"></div>
   <div id="frame">
     +
   </div>
-  <div id="forward-arrow" class="arrow"></div>
+  <div id="forward-arrow" class="arrow"><img src="../assets/forward.svg" class="arrow-image"></div>
   <script src="renderer.js"></script>
 </body>
 </html>
